Horizontal scroll fix

--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,7 @@ html,
 body {
     /*   width: 100vw;
     min-width: 100vw; */
+    overflow-x: hidden;
 }
 
 html {
